{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 92,
  "lineage": "8e81b619-5c8e-5ade-146b-5514c74205e0",
  "resources": [
    {
      "module": "module.iglu.module.iglu_lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/regions/europe-west3/instanceGroups/sp-iglu-server-grp",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-02-16T14:44:30.146-08:00",
            "enable_cdn": false,
            "fingerprint": "yZuusQ-2M2w=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/healthChecks/sp-iglu-server"
            ],
            "id": "projects/spark-10-v5/global/backendServices/sp-iglu-lb",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sp-iglu-lb",
            "port_name": "http",
            "project": "spark-10-v5",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/backendServices/sp-iglu-lb",
            "session_affinity": "NONE",
            "timeout_sec": 60
          },
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.iglu.module.iglu_lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.149.172.27",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-02-16T14:28:37.198-08:00",
            "id": "projects/spark-10-v5/global/addresses/sp-iglu-lb",
            "name": "sp-iglu-lb",
            "prefix_length": 0,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/addresses/sp-iglu-lb"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.iglu.module.iglu_lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "lb_http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/spark-10-v5/global/forwardingRules/sp-iglu-lb-http-frontend",
            "ip_address": "34.149.172.27",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sp-iglu-lb-http-frontend",
            "port_range": "80",
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/forwardingRules/sp-iglu-lb-http-frontend",
            "target": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/targetHttpProxies/sp-iglu-lb-http-proxy"
          },
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.iglu.module.iglu_lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "lb_target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-16T14:45:13.709-08:00",
            "id": "projects/spark-10-v5/global/targetHttpProxies/sp-iglu-lb-http-proxy",
            "name": "sp-iglu-lb-http-proxy",
            "project": "spark-10-v5",
            "proxy_bind": false,
            "proxy_id": 6633627925864451862,
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/targetHttpProxies/sp-iglu-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/urlMaps/sp-iglu-lb"
          },
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.iglu.module.iglu_lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "lb_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-16T14:45:02.024-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/backendServices/sp-iglu-lb",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "jj6AXGlwT_8=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/spark-10-v5/global/urlMaps/sp-iglu-lb",
            "map_id": 6327597255322963713,
            "name": "sp-iglu-lb",
            "path_matcher": [],
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/urlMaps/sp-iglu-lb",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.iglu.module.iglu_server",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "123"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "80",
                  "443",
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T14:28:37.195-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-10-v5/global/firewalls/sp-iglu-server-traffic-out",
            "log_config": [],
            "name": "sp-iglu-server-traffic-out",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "priority": 1000,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/firewalls/sp-iglu-server-traffic-out",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sp-iglu-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.iglu.module.iglu_server",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T14:28:37.343-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-10-v5/global/firewalls/sp-iglu-server-traffic-in",
            "log_config": [],
            "name": "sp-iglu-server-traffic-in",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "priority": 1000,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/firewalls/sp-iglu-server-traffic-in",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sp-iglu-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.iglu.module.iglu_server",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T14:28:37.222-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-10-v5/global/firewalls/sp-iglu-server-ssh-in",
            "log_config": [],
            "name": "sp-iglu-server-ssh-in",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "priority": 1000,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/firewalls/sp-iglu-server-ssh-in",
            "source_ranges": [
              "165.225.241.67/32",
              "80.113.68.61/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sp-iglu-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/spark-10-v5/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "project": "spark-10-v5",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "asn": 64514
              }
            ],
            "creation_timestamp": "2023-02-16T14:28:04.626-08:00",
            "id": "projects/spark-10-v5/regions/europe-west3/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "project": "spark-10-v5",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/regions/europe-west3/routers/router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "spark-10-v5/europe-west3/router/nat",
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "spark-10-v5",
            "region": "europe-west3",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/regions/europe-west3/subnetworks/terraform-private",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_subnetwork.private"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-16T14:28:05.208-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/spark-10-v5/regions/europe-west3/subnetworks/terraform-private",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "terraform-private",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "spark-10-v5",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/regions/europe-west3/subnetworks/terraform-private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-16T14:28:06.401-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/spark-10-v5/regions/europe-west3/subnetworks/terraform-public",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "terraform-public",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "spark-10-v5",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/regions/europe-west3/subnetworks/terraform-public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.pipeline.module.bigquery_loader[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "123"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T14:45:38.214-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-10-v5/global/firewalls/sp-bq-loader-server-traffic-out",
            "log_config": [],
            "name": "sp-bq-loader-server-traffic-out",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "priority": 1000,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/firewalls/sp-bq-loader-server-traffic-out",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sp-bq-loader-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline.module.bigquery_loader[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T14:45:38.120-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-10-v5/global/firewalls/sp-bq-loader-server-ssh-in",
            "log_config": [],
            "name": "sp-bq-loader-server-ssh-in",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "priority": 1000,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/firewalls/sp-bq-loader-server-ssh-in",
            "source_ranges": [
              "165.225.241.67/32",
              "80.113.68.61/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sp-bq-loader-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline.module.collector_lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/regions/europe-west3/instanceGroups/sp-collector-server-grp",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-02-16T14:49:06.544-08:00",
            "enable_cdn": false,
            "fingerprint": "P07nkpTKSjY=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/healthChecks/sp-collector-server"
            ],
            "id": "projects/spark-10-v5/global/backendServices/sp-collector-lb",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sp-collector-lb",
            "port_name": "http",
            "project": "spark-10-v5",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/backendServices/sp-collector-lb",
            "session_affinity": "NONE",
            "timeout_sec": 60
          },
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public",
            "module.pipeline.module.bad_1_topic.google_pubsub_topic.topic",
            "module.pipeline.module.collector_pubsub.data.google_compute_image.ubuntu_20_04",
            "module.pipeline.module.collector_pubsub.google_compute_firewall.ingress",
            "module.pipeline.module.collector_pubsub.google_compute_health_check.hc",
            "module.pipeline.module.collector_pubsub.google_compute_instance_template.tpl",
            "module.pipeline.module.collector_pubsub.google_compute_region_instance_group_manager.grp",
            "module.pipeline.module.collector_pubsub.google_service_account.sa",
            "module.pipeline.module.collector_pubsub.module.telemetry.random_id.auto_generated_id",
            "module.pipeline.module.collector_pubsub.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.pipeline.module.raw_topic.google_pubsub_topic.topic"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline.module.collector_lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.111.58.56",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-02-16T14:45:36.700-08:00",
            "id": "projects/spark-10-v5/global/addresses/sp-collector-lb",
            "name": "sp-collector-lb",
            "prefix_length": 0,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/addresses/sp-collector-lb"
          },
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline.module.collector_lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "lb_http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/spark-10-v5/global/forwardingRules/sp-collector-lb-http-frontend",
            "ip_address": "34.111.58.56",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "sp-collector-lb-http-frontend",
            "port_range": "80",
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/forwardingRules/sp-collector-lb-http-frontend",
            "target": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/targetHttpProxies/sp-collector-lb-http-proxy"
          },
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public",
            "module.pipeline.module.bad_1_topic.google_pubsub_topic.topic",
            "module.pipeline.module.collector_lb.google_compute_backend_service.lb_backend",
            "module.pipeline.module.collector_lb.google_compute_global_address.ip",
            "module.pipeline.module.collector_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.pipeline.module.collector_lb.google_compute_url_map.lb_url_map",
            "module.pipeline.module.collector_pubsub.data.google_compute_image.ubuntu_20_04",
            "module.pipeline.module.collector_pubsub.google_compute_firewall.ingress",
            "module.pipeline.module.collector_pubsub.google_compute_health_check.hc",
            "module.pipeline.module.collector_pubsub.google_compute_instance_template.tpl",
            "module.pipeline.module.collector_pubsub.google_compute_region_instance_group_manager.grp",
            "module.pipeline.module.collector_pubsub.google_service_account.sa",
            "module.pipeline.module.collector_pubsub.module.telemetry.random_id.auto_generated_id",
            "module.pipeline.module.collector_pubsub.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.pipeline.module.raw_topic.google_pubsub_topic.topic"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline.module.collector_lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "lb_target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-16T14:49:49.911-08:00",
            "id": "projects/spark-10-v5/global/targetHttpProxies/sp-collector-lb-http-proxy",
            "name": "sp-collector-lb-http-proxy",
            "project": "spark-10-v5",
            "proxy_bind": false,
            "proxy_id": 3165670519878127074,
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/targetHttpProxies/sp-collector-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/urlMaps/sp-collector-lb"
          },
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public",
            "module.pipeline.module.bad_1_topic.google_pubsub_topic.topic",
            "module.pipeline.module.collector_lb.google_compute_backend_service.lb_backend",
            "module.pipeline.module.collector_lb.google_compute_url_map.lb_url_map",
            "module.pipeline.module.collector_pubsub.data.google_compute_image.ubuntu_20_04",
            "module.pipeline.module.collector_pubsub.google_compute_firewall.ingress",
            "module.pipeline.module.collector_pubsub.google_compute_health_check.hc",
            "module.pipeline.module.collector_pubsub.google_compute_instance_template.tpl",
            "module.pipeline.module.collector_pubsub.google_compute_region_instance_group_manager.grp",
            "module.pipeline.module.collector_pubsub.google_service_account.sa",
            "module.pipeline.module.collector_pubsub.module.telemetry.random_id.auto_generated_id",
            "module.pipeline.module.collector_pubsub.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.pipeline.module.raw_topic.google_pubsub_topic.topic"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline.module.collector_lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "lb_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-16T14:49:38.509-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/backendServices/sp-collector-lb",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "ty56jwP60Rw=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/spark-10-v5/global/urlMaps/sp-collector-lb",
            "map_id": 1955364631539289581,
            "name": "sp-collector-lb",
            "path_matcher": [],
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/urlMaps/sp-collector-lb",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public",
            "module.pipeline.module.bad_1_topic.google_pubsub_topic.topic",
            "module.pipeline.module.collector_lb.google_compute_backend_service.lb_backend",
            "module.pipeline.module.collector_pubsub.data.google_compute_image.ubuntu_20_04",
            "module.pipeline.module.collector_pubsub.google_compute_firewall.ingress",
            "module.pipeline.module.collector_pubsub.google_compute_health_check.hc",
            "module.pipeline.module.collector_pubsub.google_compute_instance_template.tpl",
            "module.pipeline.module.collector_pubsub.google_compute_region_instance_group_manager.grp",
            "module.pipeline.module.collector_pubsub.google_service_account.sa",
            "module.pipeline.module.collector_pubsub.module.telemetry.random_id.auto_generated_id",
            "module.pipeline.module.collector_pubsub.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.pipeline.module.raw_topic.google_pubsub_topic.topic"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline.module.collector_pubsub",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "123"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T14:45:42.001-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-10-v5/global/firewalls/sp-collector-server-traffic-out",
            "log_config": [],
            "name": "sp-collector-server-traffic-out",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "priority": 1000,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/firewalls/sp-collector-server-traffic-out",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sp-collector-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline.module.collector_pubsub",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T14:45:41.519-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-10-v5/global/firewalls/sp-collector-server-traffic-in",
            "log_config": [],
            "name": "sp-collector-server-traffic-in",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "priority": 1000,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/firewalls/sp-collector-server-traffic-in",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sp-collector-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline.module.collector_pubsub",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T14:45:41.722-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-10-v5/global/firewalls/sp-collector-server-ssh-in",
            "log_config": [],
            "name": "sp-collector-server-ssh-in",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "priority": 1000,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/firewalls/sp-collector-server-ssh-in",
            "source_ranges": [
              "165.225.241.67/32",
              "80.113.68.61/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sp-collector-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline.module.enrich_pubsub",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "123"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T14:45:38.417-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-10-v5/global/firewalls/sp-enrich-server-traffic-out",
            "log_config": [],
            "name": "sp-enrich-server-traffic-out",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "priority": 1000,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/firewalls/sp-enrich-server-traffic-out",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sp-enrich-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline.module.enrich_pubsub",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T14:45:38.119-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/spark-10-v5/global/firewalls/sp-enrich-server-ssh-in",
            "log_config": [],
            "name": "sp-enrich-server-ssh-in",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/networks/terraform-network",
            "priority": 1000,
            "project": "spark-10-v5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-10-v5/global/firewalls/sp-enrich-server-ssh-in",
            "source_ranges": [
              "165.225.241.67/32",
              "80.113.68.61/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "sp-enrich-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iglu.module.iglu_db.google_sql_database.db",
            "module.iglu.module.iglu_db.google_sql_database_instance.instance",
            "module.iglu.module.iglu_db.google_sql_user.user",
            "module.iglu.module.iglu_db.random_id.db_name_suffix",
            "module.iglu.module.iglu_lb.google_compute_backend_service.lb_backend",
            "module.iglu.module.iglu_lb.google_compute_global_address.ip",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_http_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_global_forwarding_rule.lb_https_forwarding_rule",
            "module.iglu.module.iglu_lb.google_compute_ssl_policy.lb_target_https_ssl_policy",
            "module.iglu.module.iglu_lb.google_compute_target_http_proxy.lb_target_http_proxy",
            "module.iglu.module.iglu_lb.google_compute_target_https_proxy.lb_target_https_proxy",
            "module.iglu.module.iglu_lb.google_compute_url_map.lb_url_map",
            "module.iglu.module.iglu_server.data.google_compute_image.ubuntu_20_04",
            "module.iglu.module.iglu_server.google_compute_firewall.egress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress",
            "module.iglu.module.iglu_server.google_compute_firewall.ingress_ssh",
            "module.iglu.module.iglu_server.google_compute_health_check.hc",
            "module.iglu.module.iglu_server.google_compute_instance_template.tpl",
            "module.iglu.module.iglu_server.google_compute_region_instance_group_manager.grp",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_cloud_sql_client",
            "module.iglu.module.iglu_server.google_project_iam_member.sa_logging_log_writer",
            "module.iglu.module.iglu_server.google_service_account.sa",
            "module.iglu.module.iglu_server.module.telemetry.random_id.auto_generated_id",
            "module.iglu.module.iglu_server.module.telemetry.snowplow_track_self_describing_event.telemetry",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.private",
            "module.network.google_compute_subnetwork.public"
          ]
        }
      ]
    }
  ]
}